applications/openlookeng-website-docs/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: openlookeng-docs
  name: openlookeng-docs
