applications/openlookeng-website-docs/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: openlookeng-website-docs-ingress
  namespace: openlookeng-docs
spec:
  tls:
    - hosts:
        - docs.openlookeng.io
      secretName: openlookeng-website-docs-tls
  rules:
    - host: docs.openlookeng.io
      http:
        paths:
          - backend:
              serviceName: openlookeng-website-docs-service
              servicePort: 80
            path: /
